# BnuCrow3

./: .gitignore  LICENSE_MIT  README.md  README_zh.md  bun.lockb  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
data/: ppq.json  wqc.json  ymq.json  yyg.json
doc/: api.md
scripts/: vpn_parser.py
src/: App.vue  custom.css  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  cookies.json  output.html  output1.html  output_new.html  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  dcp.rs  encrypt.rs  lib.rs  main.rs  session.rs
src/components/: NavBar.vue  NavigateBar.vue  Refresher.vue
src/libs/: dcp.ts
src/libs/tauri-store/: index.ts
src/router/: routes.ts
src/views/: ActionList.vue  ClassTable.vue  Error.vue  Exam.vue  Login.vue  Score.vue
